--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ h1.site-title a:hover{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+	width: 100vw;
 }
 #sp-menu ul li dl{
 	display: flex;
@@ -223,7 +224,7 @@ h1.site-title a:hover{
 #sp-menu ul li dl dd{
 	padding-left: 10px;
 	color: #fff;
-	font-size: 2.4rem;
+	font-size: 3.2rem;
 	transition: all .3s;
 }
 #sp-menu ul li:hover dl dd{
