--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,51 @@ main{
 .sec-title{
 	text-align: center;
 	border-bottom: 3px dotted var(--accent-color);
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	font-size: 3.2rem;
+}
+
+.btn {
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	max-width: 500px;
+	height: 50px;
+	position: relative;
+	background: var(--accent-color);
+	border: 3px solid var(--accent-color);
+	border-radius: 30px;
+	color: #fff;
+	font-size: 16px;
+	line-height: 1.3;
+	text-align: left;
+	transition-duration: 0.3s;
+	cursor: pointer;
+}
+
+.btn::after{
+	content: '';
+	width: 8px;
+	height: 8px;
+	border: 0;
+	border-top: 2px solid #fff;
+	border-right: 2px solid #fff;
+	transform: rotate(45deg);
+	position: absolute;
+	top: 50%;
+	right: 25px;
+	margin-top: -6px;
+}
+
+.btn:hover {
+	color: var(--text-color);
+	background-color: #fff;
+}
+.btn:hover::after {
+	border-top: 2px solid var(--accent-color);
+	border-right: 2px solid var(--accent-color);
 }
 
 /***************************************/
@@ -271,6 +314,7 @@ footer{
 .address .title{
 	font-size: 3.2rem;
 	margin-bottom: 10px;
+	font-weight: bold;
 }
 ul.footer-menu{
 	width: 50%;
