--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,8 @@ main{
 }
 
 #sub-title{
-	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("../img/news-bg.jpg");
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("../img/pattern.png");
 	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
 }
 #sub-title h2.page-title{
 	text-align: center;
