--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ main{
 #sub-title{
 	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("../img/pattern.png");
 	background-attachment: fixed;
+	background-size: cover;
 }
 #sub-title h2.page-title{
 	text-align: center;
@@ -101,7 +102,7 @@ main{
 	background: var(--accent-color);
 	border: 3px solid var(--accent-color);
 	border-radius: 30px;
-	color: #fff;
+	color: var(--text-color);
 	font-size: 16px;
 	line-height: 1.3;
 	text-align: left;
